saves jpeg and returns to client for faster loading of data on client

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -7,8 +7,7 @@
 <body>
 <div id="plotContainer">
     <h3 id="frame_idx"></h3>
-    <div id="plot">
-    </div>
+    <div id="plot"></div>
 </div>
 
 </body>
