--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 <div class="container">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert" style="display: none" id="errorMsg">
+        There was an error
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
     <div class="row">
         <div class="col-md-6">
             <select class="selectpicker" id="videoSelect" title="Select a video">
